--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a js implementation of the problems in the book, 'algorithmic thinking' by daniel zingaro",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "typescript:build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0"
+    "eslint": "^8.49.0",
+    "typescript": "^5.2.2",
+    "@types/node": "20.6.0"
   }
 }
