--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typescript:build": "tsc"
+    "typescript:build": "tsc",
+    "lint": "eslint"
   },
   "repository": {
     "type": "git",
