--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a js implementation of the problems in the book, 'algorithmic thinking' by daniel zingaro",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "typescript:build": "tsc",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/robbymanis/algorithmic-thinking#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.5",
+    "@types/node": "20.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
-    "typescript": "^5.2.2",
-    "@types/node": "20.6.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
