--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
             4
         ],
         "linebreak-style": [
-            "error",
+            "off",
             "unix"
         ],
         "quotes": [
